Final version presented at Hylleraas seminar

--- a/hsf.tex
+++ b/hsf.tex
@@ -1,22 +1,41 @@
 \begin{frame}
 \frametitle{Hiller-Sucher-Feinberg (HSF)}
 \scriptsize
-Hydrogen convergence at different points
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Hiller-Sucher-Feinberg (HSF)}
-\scriptsize
 Some theory
 
 \end{frame}
 
 \begin{frame}
-\frametitle{Hiller-Sucher-Feinberg (HSF)}
+\frametitle{Hydrogen atom}
+\centering
 \scriptsize
-Hydrogen convergence at different points
-
+\begin{table}
+\textbf{Function value of Hydrogen 1s orbital}
+\begin{tabular}{cclcl}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$\phi(r_0)$}&
+\multicolumn{1}{l}{Error}&
+\multicolumn{1}{c}{$\phi(r_0)$}&
+\multicolumn{1}{l}{Error}\\
+\hline                        
+\hspace{10mm}\ &\hspace{15mm}\     &\hspace{15mm}\ &\hspace{15mm}\      &\hspace{10mm}\ \\
+&
+\multicolumn{2}{c}{Fermi-Contact}&
+\multicolumn{2}{c}{Hiller-Sucher-Feinberg}\\
+ MW4           &0.5\red{72 116 507}&\red{7.9e-03}  &                    &\green{       }\\
+ MW5           &0.56\red{6 687 228}&\red{2.4e-03}  &                    &\green{       }\\
+ MW6           &0.56\red{5 279 010}&\red{1.0e-03}  &                    &\green{       }\\
+ MW7           &0.564 \red{553 287}&\red{3.6e-04}  &                    &\green{       }\\
+ MW8           &0.564 \red{252 177}&\red{6.2e-05}  &                    &\green{       }\\
+               &                   &               &                    &               \\
+ Exact         &0.564 189 583      &-              &0.564 189 583       &-              \\
+               &                   &               &                    &               \\
+\hline
+\hline
+\end{tabular}
+\end{table}
 \end{frame}
 
 \begin{frame}
