--- a/nemo.tex
+++ b/nemo.tex
@@ -3,10 +3,10 @@
 \scriptsize
 
 Extracting an \emph{analytical} cusp from the wave function
-\footcite{Bischoff_2014a}
+\footcite{Seelig_1966}$^,$\footcite{Bischoff_2014a}
 \begin{itemize}
     \item Nuclear correlation factor $R$
-    \item Numerical exponential molecular orbital (NEMO)\footcite{Seelig_1966} $F_i$
+    \item Numerical exponential molecular orbital (NEMO) $F_i$
 \end{itemize}
 
 \vspace{5mm}
@@ -17,11 +17,9 @@ Extracting an \emph{analytical} cusp from the wave function
     \nonumber
     \ket{\phi_i} = R\ket{F_i}
 \end{equation}
-
 \includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/phi.pdf}
 \includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/R.pdf}
 \includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/F.pdf}\\
-
 \end{frame}
 
 \begin{frame}
@@ -154,97 +152,407 @@ Extracting an \emph{analytical} cusp from the wave function
 \usebackgroundtemplate{\includegraphics[width=1.02\paperwidth]{figures/ctcc_general.jpg}}
 
 \begin{frame}
-\frametitle{Hydrogen atom}
+\frametitle{One-electron system}
+\centering
 \scriptsize
 
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/phi.pdf}
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/R.pdf}
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/F.pdf}\\
+\textbf{Hydrogen atom}
+\begin{equation}
+    \nonumber
+    \bigg(-\frac{\nabla^2}{2} - \frac{1}{r} \bigg)\phi(r) = \epsilon \phi(r)
+\end{equation}
 
+\pause
+\vspace{10mm}
+
+\textbf{Seelig's NEMO}
+\begin{equation}
+    \nonumber
+    \phi(r) = R(r)F(r) = e^{-r}F(r)
+\end{equation}
+
+\pause
+\vspace{10mm}
+
+\textbf{Similarity transformed Schr\"{o}dinger equation}
+\begin{equation}
+    \nonumber
+    \bigg(-\frac{\nabla^2}{2} + \vec{n}\cdot\vec{\nabla} + \frac{1}{2}\bigg)F(r) =
+    \epsilon F(r)
+\end{equation}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{One-electron system}
+\centering
+\scriptsize
 \begin{table}
-\begin{tabular}{ccccccc}
+\textbf{Function value of Hydrogen 1s orbital}
+\begin{tabular}{cclcl}
 \hline
 \hline
-Precision&
-\multicolumn{1}{c}{\ }&
+\multicolumn{1}{c}{\textbf{Precision}}&
 \multicolumn{1}{c}{$\phi(r_0)$}&
+\multicolumn{1}{l}{Error}&
 \multicolumn{1}{c}{$\phi(r_1)$}&
-\multicolumn{1}{c}{\ }&
-\multicolumn{1}{c}{$\phi(r_0)$}&
-\multicolumn{1}{c}{$\phi(r_1)$}\\
-\hline
-\hspace{5mm}\ &\hspace{1mm}\ &\hspace{15mm}\ &\hspace{15mm}\ &\hspace{2mm}\ &\hspace{15mm}\ &\hspace{15mm}\ \\
-&\multicolumn{1}{c}{\ }
-&\multicolumn{2}{c}{R = Identity}                          
-&\multicolumn{1}{c}{\ }
-&\multicolumn{2}{c}{\ }\\                          
-$\epsilon = 10^{-4}$ && \red{1.3e-02} & \yellow{6.3e-04}&&                  &                 \\
-$\epsilon = 10^{-5}$ && \red{4.3e-03} & \green{2.7e-06} &&                  &                 \\
-$\epsilon = 10^{-6}$ && \red{1.4e-03} & \yellow{1.9e-06}&&                  &                 \\
-$\epsilon = 10^{-7}$ && \red{6.4e-04} & \green{4.0e-08} &&                  &                 \\
-$\epsilon = 10^{-8}$ && \red{1.1e-04} & \yellow{1.5e-08}&&                  &                 \\
-                     &&               &                 &&                  &                 \\
+\multicolumn{1}{l}{Error}\\
+\hline                        
+\hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
 \hline
 \hline
 \end{tabular}
 \end{table}
-
-\centering
+\tiny
 $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
-
 \end{frame}
 
 \begin{frame}
-\frametitle{Hydrogen atom}
+\frametitle{One-electron system}
+\centering
 \scriptsize
-
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/phi.pdf}
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/R.pdf}
-\includegraphics[scale=0.35, viewport = 175 90 430 400, clip]{figures/F.pdf}\\
-
 \begin{table}
-\begin{tabular}{ccccccc}
+\textbf{Function value of Hydrogen 1s orbital}
+\begin{tabular}{cclcl}
 \hline
 \hline
-Precision&
-\multicolumn{1}{c}{\ }&
+\multicolumn{1}{c}{\textbf{Precision}}&
 \multicolumn{1}{c}{$\phi(r_0)$}&
+\multicolumn{1}{l}{Error}&
 \multicolumn{1}{c}{$\phi(r_1)$}&
-\multicolumn{1}{c}{\ }&
-\multicolumn{1}{c}{$\phi(r_0)$}&
-\multicolumn{1}{c}{$\phi(r_1)$}\\
-\hline
-\hspace{5mm}\ &\hspace{1mm}\ &\hspace{15mm}\ &\hspace{15mm}\ &\hspace{2mm}\ &\hspace{15mm}\ &\hspace{15mm}\ \\
-&\multicolumn{1}{c}{\ }
-&\multicolumn{2}{c}{R = Identity}                          
-&\multicolumn{1}{c}{\ }
-&\multicolumn{2}{c}{R = Slater}\\                          
-$\epsilon = 10^{-4}$ && \red{1.3e-02} & \yellow{6.3e-04}&& \green{2.4e-05}  & \yellow{1.6e-04}\\
-$\epsilon = 10^{-5}$ && \red{4.3e-03} & \green{2.7e-06} && \green{4.6e-06}  & \green{2.4e-06} \\
-$\epsilon = 10^{-6}$ && \red{1.4e-03} & \yellow{1.9e-06}&& \yellow{2.0e-06} & \green{8.8e-07} \\
-$\epsilon = 10^{-7}$ && \red{6.4e-04} & \green{4.0e-08} && \green{6.7e-09}  & \green{1.9e-09} \\
-$\epsilon = 10^{-8}$ && \red{1.1e-04} & \yellow{1.5e-08}&& \green{9.2e-10}  & \green{3.8e-09} \\
-                     &&               &                 &&                  &                 \\
+\multicolumn{1}{l}{Error}\\
+\hline                        
+\hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
+\multicolumn{5}{c}{R=Identity}\\                    
+ MW4           &0.5\red{72 116 507}&   \red{7.9e-03}&0.474 3\red{87 750} & \green{7.6e-05}\\
+ MW5           &0.56\red{6 687 228}&   \red{2.4e-03}&0.474 46\red{8 244} & \green{4.4e-06}\\
+ MW6           &0.56\red{5 279 010}&   \red{1.0e-03}&0.474 464 \red{272} & \green{5.0e-07}\\
+ MW7           &0.564 \red{553 287}&   \red{3.6e-04}&0.474 463 7\red{58} & \green{8.4e-09}\\
+ MW8           &0.564 \red{252 177}&   \red{6.2e-05}&0.474 463 767       & \green{2.3e-10}\\
+ Exact         &0.564 189 583      &-               &0.474 463 767       &-               \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
+               &                   &                &                    &                \\
 \hline
 \hline
 \end{tabular}
 \end{table}
-
-\centering
+\tiny
 $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
+\end{frame}
+
+\begin{frame}
+\frametitle{One-electron system}
+\centering
+\scriptsize
+\begin{table}
+\textbf{Function value of Hydrogen 1s orbital}
+\begin{tabular}{cclcl}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$\phi(r_0)$}&
+\multicolumn{1}{l}{Error}&
+\multicolumn{1}{c}{$\phi(r_1)$}&
+\multicolumn{1}{l}{Error}\\
+\hline                        
+\hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
+\multicolumn{5}{c}{R=Identity}\\                    
+ MW4           &0.5\red{72 116 507}&   \red{7.9e-03}&0.474 3\red{87 750} & \green{7.6e-05}\\
+ MW5           &0.56\red{6 687 228}&   \red{2.4e-03}&0.474 46\red{8 244} & \green{4.4e-06}\\
+ MW6           &0.56\red{5 279 010}&   \red{1.0e-03}&0.474 464 \red{272} & \green{5.0e-07}\\
+ MW7           &0.564 \red{553 287}&   \red{3.6e-04}&0.474 463 7\red{58} & \green{8.4e-09}\\
+ MW8           &0.564 \red{252 177}&   \red{6.2e-05}&0.474 463 767       & \green{2.3e-10}\\
+ Exact         &0.564 189 583      &-               &0.474 463 767       &-               \\
+               &                   &                &                    &                \\
+\multicolumn{5}{c}{R=Slater}\\
+ MW4           &0.563 \red{832 013}&\yellow{3.5e-04}&0.474 \red{144 473} &\yellow{3.1e-04}\\
+ MW5           &0.564 18\red{8 317}& \green{1.2e-06}&0.474 463 \red{210} & \green{5.5e-07}\\
+ MW6           &0.564 18\red{8 486}&\yellow{1.0e-06}&0.474 462 \red{851} & \green{9.1e-07}\\
+ MW7           &0.564 189 5\red{60}& \green{2.2e-08}&0.474 463 7\red{56} & \green{1.1e-08}\\
+ MW8           &0.564 189 57\red{6}& \green{7.0e-09}&0.474 463 76\red{2} & \green{4.9e-09}\\
+ Exact         &0.564 189 583      &-               &0.474 463 767       &-               \\
+               &                   &                &                    &                \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+$r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
+\end{frame}
+
+\begin{frame}
+\frametitle{Many-electron systems}
+\scriptsize
+\centering
+\textbf{All orbitals share the same correlation factor}
+\begin{equation}
+    \nonumber
+    \phi_i(r) = R(r) F_i(r)
+\end{equation}
+
+\vspace{10mm}
+
+\textbf{All nuclei are combined into one correlation factor}
+\begin{equation}
+    \nonumber
+    R(r) = \prod_I R_I(r - r_I)
+\end{equation}
 
 \end{frame}
 
 \begin{frame}
-\frametitle{Similarity transform}
+\frametitle{Many-electron systems}
+\centering
 \scriptsize
-Extension to many-electron systems
-
+\begin{table}
+\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
+\begin{tabular}{crrr}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
+\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
+\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
+\hline                        
+\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+$r_0$ at the nucleus
 \end{frame}
 
 \begin{frame}
-\frametitle{Similarity transform}
+\frametitle{Many-electron systems}
+\centering
 \scriptsize
-Methyloxirane convergence
-
+\begin{table}
+\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
+\begin{tabular}{crrr}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
+\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
+\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
+\hline                        
+\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
+\multicolumn{4}{c}{R = Identity}\\
+               MW4 & 22\red{7.422 438}  & 22\red{7.286 520}  & 0.1\red{35 917}\\
+               MW5 & 22\red{5.108 976}  & 22\red{4.978 719}  & 0.13\red{0 256}\\
+               MW6 & 224.\red{595 243}  & 224.\red{464 582}  & 0.13\red{0 660}\\
+               MW7 & 224.\red{339 158}  & 224.\red{213 024}  & 0.12\red{6 134}\\
+               MW8 & 224.2\red{14 420}  & 224.0\red{89 374}  & 0.125 \red{046}\\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+                   &                    &                    &                \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+$r_0$ at the nucleus
 \end{frame}
+
+\begin{frame}
+\frametitle{Many-electron systems}
+\centering
+\scriptsize
+\begin{table}
+\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
+\begin{tabular}{crrr}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
+\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
+\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
+\hline                        
+\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
+\multicolumn{4}{c}{R = Identity}\\
+               MW4 & 22\red{7.422 438}  & 22\red{7.286 520}  & 0.1\red{35 917}\\
+               MW5 & 22\red{5.108 976}  & 22\red{4.978 719}  & 0.13\red{0 256}\\
+               MW6 & 224.\red{595 243}  & 224.\red{464 582}  & 0.13\red{0 660}\\
+               MW7 & 224.\red{339 158}  & 224.\red{213 024}  & 0.12\red{6 134}\\
+               MW8 & 224.2\red{14 420}  & 224.0\red{89 374}  & 0.125 \red{046}\\
+                   &                    &                    &                \\
+\multicolumn{4}{c}{R = Slater}\\
+               MW4 & 223.\red{971 607}  & 223.\red{841 617}  & 0.12\red{9 990}\\
+               MW5 & 224.1\red{91 162}  & 224.0\red{65 489}  & 0.125 \red{673}\\
+               MW6 & 224.212 \red{732}  & 224.087 \red{100}  & 0.125 6\red{31}\\
+               MW7 & 224.213 07\red{7}  & 224.087 44\red{0}  & 0.125 63\red{7}\\
+               MW8 & 224.213 085        & 224.087 447        & 0.125 638      \\
+                   &                    &                    &                \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+$r_0$ at the nucleus
+\end{frame}
+
+\begin{frame}
+\frametitle{Many-electron systems}
+\centering
+\scriptsize
+\textbf{HFCC of the Fluorine atom (Unrestricted Hartree-Fock)}
+\begin{table}
+\begin{tabular}{rrrr}
+\hline
+\hline
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
+\hline                        
+  cc-pVDZ      & \red{831.451}  &  cc-pCVDZ      & \red{ 53.566}  \\
+  cc-pVTZ      & \red{  1.981}  &  cc-pCVTZ      & \red{429.481}  \\
+  cc-pVQZ      & \red{144.487}  &  cc-pCVQZ      & 5\red{09.140}  \\
+  cc-pV5Z      & \red{362.384}  &  cc-pCV5Z      & 51\red{5.986}  \\
+\hline
+\hline
+\hspace{15mm}\ & \hspace{15mm}\ & \hspace{25mm}\ & \hspace{15mm}\ \\
+\hspace{15mm}\ & \hspace{15mm}\ & \hspace{25mm}\ & \hspace{15mm}\ \\
+\hline
+\hline
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
+\multicolumn{1}{r}{\textbf{MRA}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
+\hline
+  pcJ-1         & 4\red{97.794}  &  MW5          & 5\red{47.641}  \\
+  pcJ-2         & 5\red{13.137}  &  MW6          & 5\red{49.746}  \\
+  pcJ-3         & 52\red{9.493}  &  MW7          & 53\red{0.701}  \\
+  pcJ-4         & 528.\red{068}  &  MW8          & 52\red{5.862}  \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+GTO calculations with ORCA\\
+MWx: Multiwavelets with precision $\epsilon=10^{-x}$
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Many-electron systems}
+\centering
+\scriptsize
+\textbf{HFCC of the Fluorine atom (Unrestricted Hartree-Fock)}
+\begin{table}
+\begin{tabular}{rrrr}
+\hline
+\hline
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
+\hline                        
+  cc-pVDZ      & \red{831.451}  &  cc-pCVDZ      & \red{ 53.566}  \\
+  cc-pVTZ      & \red{  1.981}  &  cc-pCVTZ      & \red{429.481}  \\
+  cc-pVQZ      & \red{144.487}  &  cc-pCVQZ      & 5\red{09.140}  \\
+  cc-pV5Z      & \red{362.384}  &  cc-pCV5Z      & 51\red{5.986}  \\
+\hline
+\hline
+\hspace{15mm}\ & \hspace{15mm}\ & \hspace{25mm}\ & \hspace{15mm}\ \\
+\hspace{15mm}\ & \hspace{15mm}\ & \hspace{25mm}\ & \hspace{15mm}\ \\
+\hline
+\hline
+\multicolumn{1}{r}{\textbf{GTO}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
+\multicolumn{1}{r}{\textbf{MRA}}&
+\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
+\hline
+  pcJ-1         & 4\red{97.794}  &  MW5           &52\red{6.972}  \\
+  pcJ-2         & 5\red{13.137}  &  MW6           &528.\red{482}  \\
+  pcJ-3         & 52\red{9.493}  &  MW7           &528.61\red{3}  \\
+  pcJ-4         & 528.\red{068}  &  MW8           &528.619        \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+GTO calculations with ORCA\\
+MWx: Multiwavelets with precision $\epsilon=10^{-x}$
+\end{frame}
+
+%\begin{frame}
+%\frametitle{Extension to molecules}
+%\centering
+%\scriptsize
+%\textbf{HFCC of the CN molecule (Unrestricted Hartree-Fock)}
+%\begin{table}
+%\begin{tabular}{rrrr}
+%\hline
+%\hline
+%\multicolumn{1}{r}{\textbf{GTO}}&
+%\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
+%\multicolumn{1}{r}{\textbf{MRA}}&
+%\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
+%\hline
+%\hspace{15mm}\  &\hspace{15mm}\        &\hspace{25mm}\  &\hspace{15mm}\       \\
+%\multicolumn{4}{c}{Carbon}                                                    \\
+%  pcJ-1         & 130\red{6.2628}      &  MW5           & 131\red{2.5703}     \\
+%  pcJ-2         & 13\red{00.1446}      &  MW6           & 1310.\red{2681}     \\
+%  pcJ-3         & 130\red{8.9693}      &  MW7           & 1310.6\red{443}     \\
+%  pcJ-4         & 130\red{9.0090}      &  MW8           & 1310.68\red{43}     \\
+%                &                      &                &                     \\
+%\multicolumn{4}{c}{Nitrogen}                                                  \\
+%  pcJ-1         &  -3\red{9.1507}      &  MW5           &  -40.\red{1726}     \\
+%  pcJ-2         &  -40.\red{1619}      &  MW6           &  -40.5\red{204}     \\
+%  pcJ-3         &  -40.5\red{125}      &  MW7           &  -40.53\red{97}     \\
+%  pcJ-4         &  -40.4\red{901}      &  MW8           &  -40.538\red{6}     \\
+%                &                      &                &                     \\
+%\hline
+%\hline
+%\end{tabular}
+%\end{table}
+%\tiny
+%GTO calculations with ORCA\\
+%pcJ-x: Jensen's polarization-consistent (optimized for spin-spin coupling)\\
+%MWx: Multiwavelets with precision $\epsilon=10^{-x}$
+%\end{frame}
+
