--- a/talk.tex
+++ b/talk.tex
@@ -5,6 +5,7 @@
 \setbeamercovered{transparent}
 %\documentclass[slides,hyperref={pdfpagelabels=false}]{beamer}
 %\documentclass[handout,gray]{beamer}
+\usepackage[normalem]{ulem}
 \usepackage[makeroom]{cancel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -50,7 +51,7 @@
 \includegraphics[height=1.5cm]{figures/uio.pdf}\hspace{1cm}
 \includegraphics[height=1.5cm]{figures/sff.pdf}\hspace{1cm}
 \includegraphics[height=1.5cm]{figures/uit.pdf}}
-\date{Hylleraas seminar\\November 10 2017}
+\date{Hylleraas seminar\\January 19 2018}
 
 \include{newcommands}
 
@@ -66,7 +67,8 @@
 
 \include{introduction}
 \include{hfcc}
-\include{hsf}
+%\include{hsf}
 \include{nemo}
+\include{conclusions}
 
 \end{document}
